Fix mobile menu logo vertical alignment

--- a/sass/components/_main-menu.scss
+++ b/sass/components/_main-menu.scss
@@ -72,6 +72,11 @@
             height: var(--header-height);
             background-color: $color-grey-800;
             border-bottom: 2px solid lighten-color($color-grey-800);
+
+            a {
+                display: flex;
+                align-items: center;
+            }
         }
 
         &__page-menu-switch {
